@@ -4,6 +4,7 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 2.1.10
 =========================
  -- Fix memory leak in sched/builtin plugin.
+ -- Fixed a fair-share calculation bug in the priority/multifactor plugin.
 
 * Changes in SLURM 2.1.9
 ========================
